Add database name

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -166,6 +166,7 @@ test:
 production:
   clients:
     default:
+      database: my-movie-list
       uri: <%= ENV['MONGODB_URI'] %>
       options:
         server_selection_timeout: 5
